feat: include lit element my-credit-card

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -4,6 +4,9 @@
 <section>
 	<paper-button raised>button</paper-button>
 </section>
+<section>
+	<my-credit-card ></my-credit-card>
+</section>
 
 <p>Or any other custom element from <a href="https://www.webcomponents.org/">webcomponents.org</a>:</p>
 
