chore: add a scoped lit component

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -12,6 +12,8 @@
 	<vaadin-date-picker></vaadin-date-picker>
 </section>
 
+<sample-lit-element vip></sample-lit-element>
+
 <section>
 	<paper-icon-button id="number" icon="mail" alt="inbox">
 	</paper-icon-button>
