chore(demo): set attributes for sample lit component

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -15,7 +15,13 @@
 	<vaadin-date-picker></vaadin-date-picker>
 </section>
 
-<sample-lit-element vip></sample-lit-element>
+<sample-lit-element
+	vip
+	name="John Doe"
+	email="john.doe@example.com"
+	avatar="https://api.adorable.io/avatars/50/random-3.png"
+	phone="666 666 666">
+</sample-lit-element>
 
 <section>
 	<paper-icon-button id="number" icon="mail" alt="inbox">
