feat: regenerate ES6 imports on watch

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -5,7 +5,7 @@
 	<paper-button raised>button</paper-button>
 </section>
 <section>
-	<my-credit-card ></my-credit-card>
+	<wired-button>uno otro</wired-button>
 </section>
 
 <p>Or any other custom element from <a href="https://www.webcomponents.org/">webcomponents.org</a>:</p>
