feat: rebuild bundle only on changes
BREAKING CHANGE: web components are not looked for inside node_modules any more

chore(vscode): remove folder

feat: use caching-writer to prevent unneeded rebuilds

BREAKING CHANGE: web components are not looked for inside node_modules any more (assuming using Polymer & Bower)

style: change eslint settings and remove eslint file comments

refactor: rename property

test: remove skipped tests for not implemented functionality

test: increase coverage thresholds

docs(readme): document new property and changes

--- a/tests/dummy/app/templates/index.hbs
+++ b/tests/dummy/app/templates/index.hbs
@@ -3,6 +3,9 @@
 </p>
 <section>
 	<paper-button raised>button</paper-button>
+	<my-component>
+		<p>Hello world!</p>
+	</my-component>
 </section>
 
 <p>Or any other custom element from <a href="https://www.webcomponents.org/">webcomponents.org</a>:</p>
