--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,4 @@
+{{!-- template-lint-disable no-bare-strings  --}}
 <app-drawer-layout fullbleed>
 	<app-drawer swipe-open slot="drawer">
 		<app-toolbar>
@@ -16,7 +17,7 @@
 				<div main-title>Ember Polymer demo 🐹</div>
 
 				<a href="https://github.com/BBVAEngineering/ember-cli-polymer-bundler" tabIndex="-1">
-					<img src="images/github.png" class="github-logo" alt="">
+					<img src="images/github.png" class="github-logo" alt="" role="none">
 				</a>
 			</app-toolbar>
 		</app-header>
